Change Login Page

--- a/Login.html
+++ b/Login.html
@@ -13,13 +13,14 @@
 </head>
 
 <body>
-    <div c>
+    <div>
         <h1 class="lol">Future Graduation Project</h1>
     </div>
 
-    <dl class="lol">
+    <dl class="lol1">
         <dt>HI :)</dt>
-        <dd>This website only for <a href="www.google.com">Future Academy</a> Students who have registered the Graduation Project subject, please sign in with your Academic Gmail.</dd>
+        <dd>This website only for:
+            <BR><a href="www.google.com">Future Academy</a> Students who have registered the Graduation Project subject, please Login with your Academic Gmail.</dd>
     </dl>
 
     <div class="fuimg">
@@ -50,9 +51,9 @@
 
                 <!-- <br> -->
                 <div class="btn">
-                    <input type="submit" value="sign in">
+                    <input type="submit" value="Login In">
                     <br>
-                    <input type="submit" value="Gmail">
+                    <input type="submit" value="With Gmail Authentication">
                 </div>
             </center>
         </div>
