--- a/Login.html
+++ b/Login.html
@@ -9,56 +9,56 @@
 
     <link rel="stylesheet" href="CSS/Main.css">
 
-    <title>Future Graduation Project</title>
+
+    <title>Login</title>
 </head>
 
 <body>
-    <div>
-        <h1 class="lol">Future Graduation Project</h1>
-    </div>
+
+    <h1 class="lol">Future Graduation Project</h1>
 
     <dl class="lol1">
         <dt>HI :)</dt>
         <dd>This website only for:
-            <BR><a href="www.google.com">Future Academy</a> Students who have registered the Graduation Project subject, please Login with your Academic Gmail.</dd>
+            <BR>
+            <a href="https://www.futureacademyegypt.com/ar/home">Future Academy</a>Students who have registered the Graduation Project subject, please Login with your Academic Gmail.</dd>
     </dl>
 
     <div class="fuimg">
-        <img src="img/160_11024748.png" alt="Backgraund" align="top">
+        <img src="img/160_11024748.png" alt="Backgraund">
+    </div>
 
 
 
+    <div class="container">
+        <center>
+            <!-- <font size="50" Color="Green" Face="Brush Script MT">
+                </font> -->
 
+            <div class "login-box">
+                <h1> login</h1>
+            </div>
 
-        <div class="container">
-            <center>
-                <font size="50" Color="Green" Face="Brush Script MT">
-                </font>
+            <div class="inputs">
+                <input type="text" required>
+                <label>Username</label>
+            </div>
 
-                <div class "login-box">
-                    <h1> login</h1>
-                </div>
+            <div class="inputs">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
 
-                <div class="inputs">
-                    <input type="text" required>
-                    <label>Username</label>
-                </div>
+            <!-- <br> -->
+            <div class="btn">
+                <input type="submit" value="Login In">
+                <br>
+                <input type="submit" value="Gmail Authentication">
+            </div>
+        </center>
+    </div>
 
-                <div class="inputs">
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-
-                <!-- <br> -->
-                <div class="btn">
-                    <input type="submit" value="Login In">
-                    <br>
-                    <input type="submit" value="With Gmail Authentication">
-                </div>
-            </center>
-        </div>
-
-
+    <script src="JS/myScript.js"></script>
 </body>
 
 </html>
