--- a/Home.html
+++ b/Home.html
@@ -5,24 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/Home.css">
+
 
     <title>Future Graduation Projects</title>
 </head>
 
 <body>
-    <h2>Demo JavaScript in Body</h2>
-    <!-- action="Login.html" -->
-    <form method="POST">
-        <input name="username">
-        <input type="password" name="password">
+    <div class="left">Left</div>
+    <div class="right">Right</div>
 
-        <button type="button" href="login.html">Submit</button>
-        <a href="https://google.com"> Google</a>
-
-
-        <!-- <li> <a href="./login/login.html">Sign in / Sign Up</a> </li> -->
-    </form>
-    <script src="JS/myScript.js"></script>
 </body>
 
 </html>
