--- a/Login.html
+++ b/Login.html
@@ -18,7 +18,7 @@
     <!--  -->
     <!-- <div id="signin"></div> -->
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
     <!--  -->
 
 
