--- a/Login.html
+++ b/Login.html
@@ -66,22 +66,7 @@
         </center>
     </div>
 
-    <script src="JS/myScript.js"></script>
-    <!--  -->
-    <Script>
-        gapi.load('auth2', function() {
-            gapi.auth2.init();
-        });
-
-        function onSignIn(googleUser) {
-            var profile = googleUser.getBasicProfile();
-            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-            console.log('Name: ' + profile.getName());
-            console.log('Image URL: ' + profile.getImageUrl());
-            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-        }
-    </Script>
-    <!--  -->
+    <script src="script.js"></script>
 </body>
 
 </html>
