--- a/Code/index/Login.html
+++ b/Code/index/Login.html
@@ -7,6 +7,11 @@
     <meta name="descripton" content="its only for Future Academy Students, come on to make your Graduation Project">
     <link rel="stylesheet" href="../Style/Main.css">
     <title>Login</title>
+    <!-- 0000000 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="315658434996-sjeqbem2vk2786dm0d7bfr03gr91k4ln.apps.googleusercontent.com">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <!-- 0000000 -->
 </head>
 
 <body>
@@ -46,11 +51,16 @@
             <div class="btn">
                 <input type="submit" value="Login In">
                 <br>
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
             </div>
         </center>
     </div>
 
     <script src="../Script/myScript.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </body>
 
 </html>
