--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -8,7 +8,6 @@
 
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="..\Style\style.css">
-    <link rel="stylesheet" href="..\Style\upperbar.css">
     <link rel="stylesheet" href="..\Style\sidebar.css">
     <link rel="stylesheet" href="..\Style\post.css">
 
@@ -241,8 +240,9 @@
     <!-- Buttom Content -->
     <div class="Contant">
         <p>
-            For 2021 fresh grades There an open vacancy "IT Support" Requirements -Cairo and Giza residence only -2020-2021 graduate -Education: Computer science -Experience: 0 years -Good knowledge at CCNA -Good knowledge at MCSA -Good command in English send your
-            CV hamr.emad@gmail.com
+            You Welcome in our website we hope a good Graduation Project to you and your team.
+            <br>Enjoy and make some knowledge and experience for your carrer.
+            <br>After you end your Graduation Project please give us feedback.
         </p>
     </div>
 
