--- a/Code/index/Team.html
+++ b/Code/index/Team.html
@@ -125,13 +125,15 @@
 
 
 
-    <!-- Creating Team Popup -->
+    <!-- AboutCreating Team Popup -->
 
-    <label for="Advice" class="add">
-        Hi: dont create a team if you dont sure about any information<br>
-        cuse this will make a problime, First talk with your friends<br>
+    <label class="add">
+        Hi: dont create a team if you dont sure about any information
+        cuse this will make a problime, First talk with your friends
         and when you are ready create it.
     </label>
+
+    <!-- Creating Team Popup -->
     <div class="popup" id="popup-1">
         <div class="overlay"></div>
         <div class="content">
@@ -213,6 +215,13 @@
     </div>
     <button onclick="togglepopup()"> Create Team</button>
 
+    <!-- Another Chance -->
+    <label class="add1">
+        Hi: dont create a team if you dont sure about any information
+        cuse this will make a problime, First talk with your friends
+        and when you are ready create it.
+    </label>
+    <botton class="chance">More Information</botton>
 
     <!-- JavaScript Connection -->
     <script src="..\Script\script.js"></script>
