--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -23,7 +23,7 @@
 <body>
     <!-- The Left Bar -->
     <nav class="sidebar close">
-        <!-- Header Menu bar to  -->
+        <!-- Menu Header  -->
         <header>
             <div class="image-text">
                 <span class="image">
@@ -40,11 +40,13 @@
             <!--  -->
         </header>
 
-        <!--  -->
+        <!-- Menu Center & Bottom -->
         <div class="menu-bar">
             <div class="menu">
 
                 <ul class="menu-links">
+
+                    <!-- Home -->
                     <li class="nav-link">
                         <a href="Home.html">
                             <i class='bx bx-home-alt icon'></i>
@@ -60,41 +62,41 @@
                         </a>
                     </li>
 
-                    <!--  -->
+                    <!-- Team -->
                     <li class="nav-link">
                         <a href="Team.html">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Team</span>
                         </a>
                     </li>
-                    <!--  -->
 
+                    <!-- Projects -->
                     <li class="nav-link">
-                        <a href="Project.html">
+                        <a href="Projects.html">
                             <i class='bx bx-code-alt icon'></i>
                             <span class="text nav-text">Project</span>
                         </a>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="Book.html">
-                                <i class='bx bx-book icon'></i>
-                                <span class="text nav-text">Book</span>
-                            </a>
-                        </li>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="About.html">
-                                <i class='bx bx-message-alt-detail icon'></i>
-                                <span class="text nav-text">About</span>
-                            </a>
-                        </li>
+                    </li>
 
+                    <!-- Book -->
+                    <li class="nav-link">
+                        <a href="Book.html">
+                            <i class='bx bx-book icon'></i>
+                            <span class="text nav-text">Book</span>
+                        </a>
+                    </li>
 
+                    <!-- About -->
+                    <li class="nav-link">
+                        <a href="About.html">
+                            <i class='bx bx-message-alt-detail icon'></i>
+                            <span class="text nav-text">About</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
-            <!--  -->
-            <!--  -->
+            <!-- bottom Menu -->
             <div class="bottom-content">
                 <li class="">
                     <a href="Login.html">
@@ -117,7 +119,6 @@
 
             </div>
         </div>
-
     </nav>
 
 
