--- a/Code/index/Team.html
+++ b/Code/index/Team.html
@@ -73,7 +73,7 @@
                     <!--  -->
 
                     <li class="nav-link">
-                        <a href="Project.html">
+                        <a href="Projects.html">
                             <i class='bx bx-code-alt icon'></i>
                             <span class="text nav-text">Project</span>
                         </a>
