--- a/Code/index/Projects.html
+++ b/Code/index/Projects.html
@@ -7,12 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="..\Style\style.css">
-    <link rel="stylesheet" href="..\Style\upperbar.css">
-    <link rel="stylesheet" href="..\Style\sidebar.css">
-    <link rel="stylesheet" href="..\Style\post.css">
-    <!----======== CSS ======== -->
-    <link rel="stylesheet" href="..\Style\about.css">
+    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="../Style/sidebar.css">
+    <link rel="stylesheet" href="../Style/projects.css">
 
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -26,7 +23,7 @@
 <body>
     <!-- The Left Bar -->
     <nav class="sidebar close">
-        <!-- Header Menu bar to  -->
+        <!-- Menu Header  -->
         <header>
             <div class="image-text">
                 <span class="image">
@@ -43,11 +40,12 @@
             <!--  -->
         </header>
 
-        <!--  -->
+        <!-- Menu Center & Bottom -->
         <div class="menu-bar">
             <div class="menu">
-
                 <ul class="menu-links">
+
+                    <!-- Home -->
                     <li class="nav-link">
                         <a href="Home.html">
                             <i class='bx bx-home-alt icon'></i>
@@ -63,41 +61,41 @@
                         </a>
                     </li>
 
-                    <!--  -->
+                    <!-- Team -->
                     <li class="nav-link">
                         <a href="Team.html">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Team</span>
                         </a>
                     </li>
-                    <!--  -->
 
+                    <!-- Projects -->
                     <li class="nav-link">
                         <a href="Projects.html">
                             <i class='bx bx-code-alt icon'></i>
                             <span class="text nav-text">Project</span>
                         </a>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="Book.html">
-                                <i class='bx bx-book icon'></i>
-                                <span class="text nav-text">Book</span>
-                            </a>
-                        </li>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="About.html">
-                                <i class='bx bx-message-alt-detail icon'></i>
-                                <span class="text nav-text">About</span>
-                            </a>
-                        </li>
+                    </li>
 
+                    <!-- Book -->
+                    <li class="nav-link">
+                        <a href="Book.html">
+                            <i class='bx bx-book icon'></i>
+                            <span class="text nav-text">Book</span>
+                        </a>
+                    </li>
 
+                    <!-- About -->
+                    <li class="nav-link">
+                        <a href="About.html">
+                            <i class='bx bx-message-alt-detail icon'></i>
+                            <span class="text nav-text">About</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
-            <!--  -->
-            <!--  -->
+            <!-- bottom Menu -->
             <div class="bottom-content">
                 <li class="">
                     <a href="Login.html">
@@ -117,17 +115,29 @@
                         <span class="switch"></span>
                     </div>
                 </li>
-
             </div>
         </div>
-
     </nav>
 
-    <!-- PDF -->
-    <div class="pdf">
-        <embed class="dd" src="../../Content/System Analysis and Design.pdf" type="application/pdf">
+    <!-- Projects -->
+    <div class="Upload">
+        <button>
+            <i class='bx bx-upload'></i>
+            <span class="text nav-text">Proposel</span>
+        </button>
+        <button>
+            <i class='bx bx-upload'></i>
+            <span class="text nav-text">Presentation</span>
+        </button>
+        <button>
+            <i class='bx bx-upload'></i>
+            <span class="text nav-text">Discussion</span>
+        </button>
+        <button>
+            <i class='bx bxl-github'></i>
+            <span class="text nav-text">Discussion</span>
+        </button>
     </div>
-
 
 
     <!-- JavaScript Connection -->
