--- a/Code/index/Book.html
+++ b/Code/index/Book.html
@@ -84,10 +84,36 @@
                             <span class="text nav-text">Book</span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-category-alt'> Chapter One</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-analyse'> Chapter Tow</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-droplet'> Chapter Three</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-code-alt'> Chapter Four</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bxs-doughnut-chart'> Chapter Five</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bxl-opera'> Chapter Six</i>
+                                </a>
+                            </li>
                         </ul>
                     </li>
 
@@ -125,37 +151,13 @@
         </div>
     </nav>
 
-    <!-- Book -->
+    <!-- Buttom -->
     <div class="Write">
-        <button>
-            <i class='bx bx-category-alt'></i>
-            <span class="text nav-text">Chapter One</span>
-        </button>
-        <button>
-            <i class='bx bx-analyse'></i>
-            <span class="text nav-text">Chapter Tow</span>
-        </button>
-        <button>
-            <i class='bx bx-droplet'></i>
-            <span class="text nav-text">Chapter Three</span>
-        </button>
-        <button>
-            <i class='bx bx-code-alt'></i>
-            <span class="text nav-text">Chapter Four</span>
-        </button>
-        <button>
-            <i class='bx bxs-doughnut-chart'></i>
-            <span class="text nav-text">Chapter Five</span>
-        </button>
-        <button>
-            <i class='bx bxl-opera'></i>
-            <span class="text nav-text">Chapter Six</span>
-        </button>
-        <button>
+        <button class="aa">
             <i class='bx bxs-download'></i>
             <span class="text nav-text">Download</span>
         </button>
-        <button>
+        <button class="aa">
             <i class='bx bx-printer'></i>
             <span class="text nav-text">Print</span>
         </button>
