--- a/Code/index/Book.html
+++ b/Code/index/Book.html
@@ -152,12 +152,27 @@
     </nav>
 
     <!-- Buttom -->
+    <div class="cont">
+        <p>
+            Hi: this is a guide for you to make a good Graduation book <br> you have to read <strong>About PDF</strong> and to build your Project on System Development life cycle <strong>(SDLC).</strong><br> there are six chapters in the Graduation Book.
+            <ul>
+                <li><strong>Chapter One:</strong> Contain The Book Introduction</li>
+                <li><strong>Chapter Two:</strong> Contain The Project Planning, Analysis</li>
+                <li><strong>Chapter Three:</strong> Contain The Project Designs, Code</li>
+                <li><strong>Chapter Four:</strong> Contain Integration, Testing</li>
+                <li><strong>Chapter Five:</strong> Contain Acceptance, installation, deployment</li>
+                <li><strong>Chapter Six:</strong> Contain The Recommendations, Conclusion, Sources</li>
+            </ul>
+            When you Write the Chapter the Doctor will read it and give you feedback on to do it right.
+            <br>After Writing your Book you can Download it as a PDF or Print it directly from here.
+        </p>
+    </div>
     <div class="Write">
-        <button class="aa">
+        <button class="Down">
             <i class='bx bxs-download'></i>
             <span class="text nav-text">Download</span>
         </button>
-        <button class="aa">
+        <button class="Prin">
             <i class='bx bx-printer'></i>
             <span class="text nav-text">Print</span>
         </button>
