--- a/Code/index/About.html
+++ b/Code/index/About.html
@@ -126,7 +126,7 @@
     <!-- Download Button -->
     <P>
         SDLC is some of the steps a stander you have to go through to make good software.
-        <br>This PDF Created by <strong>Dr.Mohammed Farahat</strong> Click to Download
+        <br>This PDF Created by <strong>Dr.Mohammed Farahat</strong> Click to Download.
     </P>
     <a href="../../Content/System Analysis and Design.pdf" download='SDLC' class="download-btn">Download SDLC
         <i class="fa fa-download"></i>
