--- a/Code/index/Projects.html
+++ b/Code/index/Projects.html
@@ -135,7 +135,7 @@
         </button>
         <button>
             <i class='bx bxl-github'></i>
-            <span class="text nav-text">Discussion</span>
+            <span class="text nav-text">Project GitHub</span>
         </button>
     </div>
 
