--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="descripton" content="its only for Future Academy Students, come on to make your Graduation Project">
+    <link rel="stylesheet" href="../Style/Main.css">
+    <title>Login</title>
+    <meta name="google-signin-client_id" content="315658434996-sjeqbem2vk2786dm0d7bfr03gr91k4ln.apps.googleusercontent.com">
+
+    <!-- SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!----======== CSS ======== -->
@@ -21,6 +28,53 @@
 </head>
 
 <body>
+    <h1 class="lol">Future Graduation Project</h1>
+    <dl class="lol1">
+        <dt>HI :)</dt>
+        <dd>This website only for:
+            <BR>
+            <a href="https://www.futureacademyegypt.com/ar/home">Future Academy</a> Students who have registered the Graduation Project subject, please Login with your Academic Gmail.</dd>
+    </dl>
+
+    <div class="fuimg">
+        <img src="../../icons/160_11024748.png" alt="Backgraund">
+    </div>
+
+    <div class="container">
+        <center>
+            <div class "login-box">
+                <h1> login</h1>
+            </div>
+
+            <div class="inputs">
+                <input type="text" required>
+                <label>Username</label>
+            </div>
+
+            <div class="inputs">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
+
+            <!-- <br> -->
+            <div class="btn">
+                <input type="submit" value="Login In">
+                <br>
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            </div>
+        </center>
+    </div>
+
+    <!-- User Data -->
+    <div class="data">
+        <p>Name</p>
+        <p id="name"></p>
+        <p>Image</p>
+        <img id="image" class="rounded-circle" width="100" height="100" />
+        <p>Email</p>
+        <p id="email"></p>
+    </div>
+
     <!-- The Left Bar -->
     <nav class="sidebar close">
         <!-- Menu Header  -->
@@ -48,7 +102,7 @@
 
                     <!-- Home -->
                     <li class="nav-link">
-                        <a href="Home.html">
+                        <a href="Login.html">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Home</span>
                         </a>
@@ -99,7 +153,7 @@
             <!-- bottom Menu -->
             <div class="bottom-content">
                 <li class="">
-                    <a href="Login.html">
+                    <a class="btn btn-danger" onclick="signOut();">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
                     </a>
@@ -121,9 +175,8 @@
         </div>
     </nav>
 
-
     <!-- Creating Post -->
-    <div class="container">
+    <div class="container123">
         <center>
             <div class="inputs">
                 <input type="text" onclick="togglepopup()">
@@ -239,7 +292,7 @@
     </div>
 
     <!-- Buttom Content -->
-    <div class="Contant">
+    <div class="Contant123">
         <p>
             You Welcome in our website we hope a good Graduation Project to you and your team.
             <br>Enjoy and make some knowledge and experience for your carrer.
@@ -249,6 +302,11 @@
 
     <!-- JavaScript Connection -->
     <script src="..\Script\script.js"></script>
+    <script src="../Script/myScript.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </body>
 
 </html>
