--- a/Code/index/About.html
+++ b/Code/index/About.html
@@ -100,7 +100,7 @@
             <!--  -->
             <div class="bottom-content">
                 <li class="">
-                    <a href="Login.html">
+                    <a class="btn btn-danger" onclick="signOut();">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
                     </a>
