--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -102,7 +102,7 @@
 
                     <!-- Home -->
                     <li class="nav-link">
-                        <a href="Login.html">
+                        <a href="Home.html">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Home</span>
                         </a>
