--- a/Code/index/Projects.html
+++ b/Code/index/Projects.html
@@ -98,7 +98,7 @@
             <!-- bottom Menu -->
             <div class="bottom-content">
                 <li class="">
-                    <a href="Login.html">
+                    <a class="btn btn-danger" onclick="signOut();">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
                     </a>
