--- a/Code/index/Book.html
+++ b/Code/index/Book.html
@@ -91,7 +91,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <i class='bx bx-analyse'> Chapter Tow</i>
+                                    <i class='bx bx-analyse'> Chapter Two</i>
                                 </a>
                             </li>
                             <li>
