--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -133,11 +133,43 @@
                     </li>
 
                     <!-- Book -->
-                    <li class="nav-link">
+                    <li class="nav-link" id="AA">
                         <a href="Book.html">
                             <i class='bx bx-book icon'></i>
                             <span class="text nav-text">Book</span>
                         </a>
+                        <ul class="submenu">
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-category-alt'> Chapter One</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-analyse'> Chapter Two</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-droplet'> Chapter Three</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-code-alt'> Chapter Four</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bxs-doughnut-chart'> Chapter Five</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bxl-opera'> Chapter Six</i>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
 
                     <!-- About -->
