--- a/Code/index/Team.html
+++ b/Code/index/Team.html
@@ -46,8 +46,9 @@
         <!--  -->
         <div class="menu-bar">
             <div class="menu">
-
                 <ul class="menu-links">
+
+                    <!-- Home -->
                     <li class="nav-link">
                         <a href="Home.html">
                             <i class='bx bx-home-alt icon'></i>
@@ -63,36 +64,69 @@
                         </a>
                     </li>
 
-                    <!--  -->
+                    <!-- Team -->
                     <li class="nav-link">
                         <a href="Team.html">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Team</span>
                         </a>
                     </li>
-                    <!--  -->
 
+                    <!-- Project -->
                     <li class="nav-link">
                         <a href="Projects.html">
                             <i class='bx bx-code-alt icon'></i>
                             <span class="text nav-text">Project</span>
                         </a>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="Book.html">
-                                <i class='bx bx-book icon'></i>
-                                <span class="text nav-text">Book</span>
-                            </a>
-                        </li>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="About.html">
-                                <i class='bx bx-message-alt-detail icon'></i>
-                                <span class="text nav-text">About</span>
-                            </a>
-                        </li>
+                    </li>
 
+                    <!-- Book -->
+                    <li class="nav-link" id="AA">
+                        <a href="Book.html">
+                            <i class='bx bx-book icon'></i>
+                            <span class="text nav-text">Book</span>
+                        </a>
+                        <ul class="submenu">
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-category-alt'> Chapter One</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-analyse'> Chapter Two</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-droplet'> Chapter Three</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bx-code-alt'> Chapter Four</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bxs-doughnut-chart'> Chapter Five</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class='bx bxl-opera'> Chapter Six</i>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
 
+                    <!-- About -->
+                    <li class="nav-link">
+                        <a href="About.html">
+                            <i class='bx bx-message-alt-detail icon'></i>
+                            <span class="text nav-text">About</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
