--- a/Code/index/About.html
+++ b/Code/index/About.html
@@ -9,7 +9,7 @@
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="..\Style\style.css">
     <link rel="stylesheet" href="..\Style\upperbar.css">
-    <link rel="stylesheet" href="..\Style\sidebar.css">
+    <link rel="stylesheet" href="../Style/sidebar.css">
     <link rel="stylesheet" href="..\Style\post.css">
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="..\Style\about.css">
