--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <!-- Future Academy -->
     <h1 class="lol">Future Graduation Project</h1>
     <dl class="lol1">
         <dt>HI :)</dt>
