--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -41,6 +41,7 @@
         <img src="../../icons/160_11024748.png" alt="Backgraund">
     </div>
 
+    <!-- Login Form -->
     <div class="container">
         <center>
             <div class "login-box">
@@ -70,10 +71,10 @@
     <div class="data">
         <p>Name</p>
         <p id="name"></p>
-        <p>Image</p>
-        <img id="image" class="rounded-circle" width="200" height="200" />
-        <p>Email</p>
-        <p id="email"></p>
+        <!-- <p>Image</p> -->
+        <img id="image" class="rounded-circle" width="100" height="100" />
+        <!-- <p>Email</p> -->
+        <!-- <p id="email"></p> -->
     </div>
 
     <!-- The Left Bar -->
