--- a/Code/index/Projects.html
+++ b/Code/index/Projects.html
@@ -258,10 +258,26 @@
             <i class='bx bx-upload'></i>
             <span class="text nav-text">Discussion</span>
         </button>
-        <button>
+        <button onclick="git()">
             <i class='bx bxl-github'></i>
             <span class="text nav-text">Project GitHub</span>
         </button>
+    </div>
+    <!-- Add Git -->
+    <div class="Git" id="Git-1">
+        <div class="overlay"></div>
+        <div class="content">
+            <div class="close-btn" onclick="git()">&times;
+            </div>
+            <h1>Project GitHub Link</h1>
+            <div class="inputfield">
+                <!-- <label></label> -->
+                <input type="text" class="input">
+            </div>
+            <div class="inputfield">
+                <input type="submit" value="Add" class="btn">
+            </div>
+        </div>
     </div>
 
 
