--- a/Code/index/Home.html
+++ b/Code/index/Home.html
@@ -4,23 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descripton" content="its only for Future Academy Students, come on to make your Graduation Project">
     <link rel="stylesheet" href="../Style/Main.css">
-    <title>Login</title>
     <meta name="google-signin-client_id" content="315658434996-sjeqbem2vk2786dm0d7bfr03gr91k4ln.apps.googleusercontent.com">
-
-    <!-- SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS -->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="..\Style\style.css">
     <link rel="stylesheet" href="..\Style\sidebar.css">
     <link rel="stylesheet" href="..\Style\post.css">
 
-    <!----===== Boxicons CSS ===== -->
+    <!----===== Boxicons CSS FontAweome ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <!-- FontAweome CDN Link for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
     <!----======== Page Title ======== -->
