--- a/Code/index/About.html
+++ b/Code/index/About.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="..\Style\style.css">
-    <link rel="stylesheet" href="..\Style\upperbar.css">
+    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="../Style/upperbar.css">
     <link rel="stylesheet" href="../Style/sidebar.css">
-    <link rel="stylesheet" href="..\Style\post.css">
+    <link rel="stylesheet" href="../Style/post.css">
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="..\Style\about.css">
+    <link rel="stylesheet" href="../Style/Abou.css">
+    <!-- <link rel="stylesheet" href="..\Style\about.css"> -->
 
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -48,83 +49,37 @@
             <div class="menu">
 
                 <ul class="menu-links">
+                    <!-- Home -->
                     <li class="nav-link">
-                        <a href="Home.html">
+                        <a href="home.php">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Home</span>
                         </a>
                     </li>
 
-                    <!-- Notifications -->
+                    <!-- Team -->
                     <li class="nav-link">
-                        <a href="Notifications.html">
-                            <i class='bx bx-bell icon'></i>
-                            <span class="text nav-text">Notifications</span>
-                        </a>
-                    </li>
-
-                    <!--  -->
-                    <li class="nav-link">
-                        <a href="Team.html">
+                        <a href="team.php">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Team</span>
                         </a>
                     </li>
-                    <!--  -->
 
+                    <!-- Projects -->
                     <li class="nav-link">
-                        <a href="Projects.html">
+                        <a href="Projects.php">
                             <i class='bx bx-code-alt icon'></i>
                             <span class="text nav-text">Project</span>
                         </a>
-                        <!-- Book -->
-                        <li class="nav-link" id="AA">
-                            <a href="Book.html">
-                                <i class='bx bx-book icon'></i>
-                                <span class="text nav-text">Book</span>
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="#">
-                                        <i class='bx bx-category-alt'> Chapter One</i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class='bx bx-analyse'> Chapter Two</i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class='bx bx-droplet'> Chapter Three</i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class='bx bx-code-alt'> Chapter Four</i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class='bx bxs-doughnut-chart'> Chapter Five</i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class='bx bxl-opera'> Chapter Six</i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <!--  -->
-                        <li class="nav-link">
-                            <a href="About.html">
-                                <i class='bx bx-message-alt-detail icon'></i>
-                                <span class="text nav-text">About</span>
-                            </a>
-                        </li>
+                    </li>
 
-
+                    <!-- About -->
+                    <li class="nav-link">
+                        <a href="About.html">
+                            <i class='bx bx-message-alt-detail icon'></i>
+                            <span class="text nav-text">About</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -132,7 +87,7 @@
             <!--  -->
             <div class="bottom-content">
                 <li class="">
-                    <a class="btn btn-danger" onclick="signOut();">
+                    <a href="logout.php">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
                     </a>
